VIM F1 to save - TMUX remap leader ro CapsLock+A

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,3 +2,8 @@ set -g default-terminal "screen-256color"
 set -g status-bg blue
 set -g status-fg white
 set-option history-limit 10000
+
+# Remap leader to Ctrl+A
+set prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
