Remap pane split to - and |

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,3 +7,9 @@ set-option history-limit 10000
 set prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+
+# Split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
