--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,7 @@
+# Force a reload of the tmux.conf file
+unbind r
+bind r source-file ~/.tmux.conf \; move-window -r\;  display "config reloaded!"
+
 set -g default-terminal "screen-256color"
 set -g status-bg blue
 set -g status-fg white
@@ -13,3 +17,7 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# Resizing panes
+bind < resize-pane -L 20
+bind > resize-pane -R 20
