Renumber tmux windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,3 +21,7 @@ unbind %
 # Resizing panes
 bind < resize-pane -L 20
 bind > resize-pane -R 20
+set-option -g renumber-windows on
+
+# Automatically renumber tmux windows
+set -g renumber-windows on
