--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,3 +25,6 @@ set-option -g renumber-windows on
 
 # Automatically renumber tmux windows
 set -g renumber-windows on
+
+# Set active pane border
+set-option -g pane-active-border-fg yellow
